--- a/Simple/index.html
+++ b/Simple/index.html
@@ -14,6 +14,7 @@
 		<script src="/lib/gelHTML.js"></script> 
 		<script src="/lib/gelCanvas.js"></script> 
 		<script src="/lib/gelSynth.js"></script>
+		<script src="/lib/gelMath.js"></script>
 		
 		<!-- GAME CODE -->
 		<script src="main.js"></script>		
